--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="gutter-right logo">
             <img src="assets/big-logo.png" />
         </div>
+        <section class="textInput"></section>
     </header>
     <main>
         <section class="main-section">
